feat: add research job deletion from history
